<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SCORE TRACKER</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="choose_one">Choose One:  </string>
    <string name="get_weather">Get Weather</string>
    <string name="sports">SPORTS</string>
    <string name="news">NEWS</string>
	<string name="weather">WEATHER</string>
    <string name="twitter">TWITTER</string>
    <string name="football">FOOTBALL</string>
    <string name="basketball">BASKETBALL</string>
    <string name="baseball">BASEBALL</string>
    <string name="tennis">TENNIS</string>
    <string name="golf">GOLF</string>
    <string name="soccer">SOCCER</string>
    <string name="hockey">HOCKEY</string>
    <string name="curling">CURLING</string>
    <string name="lacrosse">LACROSSE</string>
    <string name="rugby">RUGBY</string>
    <string name="bowling">BOWLING</string>
    <string name="welcome">WELCOME TO SCORE TRACKER!</string>
    <string name="weatherIntro">This is the weather fragment</string>
    <string name="newsIntro">This is the news fragment</string>
    <string name="twitterIntro">This is the twitter fragment</string>
    <string name="local">LOCAL</string>
    <string name="regional">REGIONAL</string>
    <string name="national">NATIONAL</string>
    <string name="world">WORLD</string>
</resources>
