<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="end" >
    
    <HorizontalScrollView
        android:id="@+id/horizontalScrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/Football"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_marginLeft="14dp"
                android:text="@string/football" />

            <Button
                android:id="@+id/Basketball"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_marginLeft="14dp"
                android:text="@string/basketball" />

            <Button
                android:id="@+id/Baseball"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_marginLeft="14dp"
                android:text="@string/baseball" />

            <Button
                android:id="@+id/Golf"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_marginLeft="14dp"
                android:text="@string/golf" />

            <Button
                android:id="@+id/Soccer"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_marginLeft="14dp"
                android:text="@string/soccer" />

            <Button
                android:id="@+id/Tennis"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_marginLeft="14dp"
                android:text="@string/tennis" />

            <Button
                android:id="@+id/Bowling"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_marginLeft="14dp"
                android:text="@string/bowling" />

            <Button
                android:id="@+id/Rugby"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_marginLeft="14dp"
                android:text="@string/rugby" />

            <Button
                android:id="@+id/Lacrosse"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_marginLeft="14dp"
                android:text="@string/lacrosse" />
			<Button
                android:id="@+id/Hockey"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_marginLeft="14dp"
                android:text="@string/hockey" />
            <Button
                android:id="@+id/Curling"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_marginLeft="14dp"
                android:text="@string/curling" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/horizontalScrollView3"
  
        android:orientation="vertical"
        android:background="@drawable/background" >

        <ListView
            android:id="@+id/listSports"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/listbackground"
            android:divider="#0000CC"
            android:dividerHeight="0.1dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp"
            android:padding="10dp" >
        </ListView>
    </LinearLayout>
    
</RelativeLayout>