<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         android:background="@drawable/scrollbar"  >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/choose_one"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >
            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                 >

                <Button
                    android:id="@+id/Sports"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:text="@string/sports"
                    android:onClick="openSportsView" />

                <Button
                    android:id="@+id/News"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="14dp"
                    android:text="@string/news" />

                <Button
                    android:id="@+id/Weather"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="14dp"
                    android:text="@string/weather" />

                <Button
                    android:id="@+id/Twitter"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="14dp"
                    android:text="@string/twitter" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

   <LinearLayout
       android:orientation="horizontal"
       android:id="@+id/myFragment"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="50dp"
  	   android:background="@drawable/background"/>
	
</RelativeLayout>